<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GEZİ REHBERİ</string>
    <string name="SaldaGolu">
        Akdeniz Bölegsinin Burdur ilinin Yeşilova ilçesinde yer Alan Salda Gölü,ilçe merkezine 4 kilometre uzaklıkta yer almaktadır.44 kilometre büyüklügüne sahipolan salda Gölünde sazan balıklarının olduça bol oldugunu ifade  edebilirz .
        Gölun üzerinde ise 7 adet  Ada bulunuyor.ancak bu adalar yazın suların çekilmesi ile ortaya çıkıyor
    </string>
    <string name="SaldaGol1">
        Salda gölü, tabiatın bir insana sunabileceği eşsiz doğallığı ve
        harikalığı cömertçe sunuyor.Suyundaki zengin mineral yapısı
        nedeniyle insanlar için şifa da dağıtan Salda gölü, dünyaca
        ünlü tatil adası Maldivler ile kıyaslanıyor
        Dünya miras listesinde yer alan göl, ayrıca dünyanın en temiz
        beşinci gölü unvanına da sahiptir. Gölün belli bir yerinde yüzmek
        serbest; ancak göle yüzmek için gireceklerin açılması ve
        belirlenen sınırlar dışına çıkması yasak. Çünkü göl aniden
        derinleşebiliyor ve kişiyi içine çekebiliyor.

    </string>
    <string name="Saldagol2">

        Başlı başına bir cennet güzelliğine sahip Salda gölünün tüm
        çevresinin gezilmesi gerekir. Harika bir doğa havası almak ve
        kartpostallık fotoğraflar yakalamak için göl etrafını herkesin
        gezmesini tavsiye ederiz. Gölün etrafının yaklaşık olarak 40
        km olduğunu ifade edebiliriz. Göl etrafını bisikletle gezmek için
        Yeşilova’dan bisiklet kiralanabilir.
        Salda adaları olarak bilinen ve yazın suyun çekilmesiyle ortaya
        çıkan beyaz adalara da yolculuk yapılabilir. Ancak bunun için göl
        ziyaretini yaz döneminde yapmalısınız. Diğer dönemler beyaz
        adaların su altında kalıyor. Salda gölünün tabiat parkı kısmında ise
        suya girebilirsiniz. Yüzmek için en uygun yerin bu plaj olduğu
        ifade ediliyor

    </string>
    <string name="Saldagol3">

        Marsı görmeyen bizler için bunun öneminin olmadığı
        düşünülebilir. Ancak bilim insanları tarafından Salda üzerinden
        yapılan incelemeler sonucunda ortaya çıkan sonuç bu: Salda,
        jeopolitik oluşum olarak Mars ile aynı karaktere sahiptir. Yani
        ayakları yakmayan beyaz kum ve kayalarının mineral yapısıyla
        Mars’ta tespit edilen oluşumların yapıları benzerdir. Bu bilgi
        ışığında Salda gölüne bir kez daha bakıldığında veya plajlarında
        gezildiğinde dünyada Mars’ı da gezdim ve gördüm diyebilirsiniz.
        Mars’ta yaşam arayıp, oraya yerleşmeyi hayal edenler için ise bu
        inceleme ve araştırma bir umut ışığı da olmuştur. Mars’ın yapısına
        benzer bir konumun dünyada yer alması dünya dışında bir yaşam
        için sevindirici bir gelişme olarak algılanıyor.

    </string>
    <string name="Saldago4">

        Salda gölü çevresinde yer alan otel sayısı sadece bir adettir.
    Bunun dışında otelde konaklamak isteyenler Yeşilova ilçe
    merkezindeki otellere uğramalılar. Konaklama fiyatları uygun
    olsa da, yaz dönemi içerisinde yer bulabilmek oldukça güçtür.
    Merkezde yer alan otellerden biri, Görenser Otel’dir. Diğeri ise,
    Berliner Otel.

    </string>
    <string name="Saldago5">

    Burdur Yeşilova’ya gelenlerin en büyük eğlencesinin kamp
    olduğunu ifade edebiliriz. Kamp ve Salda gölü tatil için burada
    konaklamak isteyenlerin en büyük iki nimetidir. Bunlar dışında
    Yeşilova’da yapılacak bir şey söz konusu değil. Salda ölgüne
    gelenlerin kamp deneyimleri yaşamaları için iki adres vardır.
    Birincisi, Yeşilova Belediyesi Halk Plajı, ikincisi ise, Doğanbaba
    Halk Plajı.

    </string>
    <string name="Saldago6">

    Salda gölü kamp alanlarında konaklamak ücretsizdir.
    Çadırınızı kurmak için iyi bir yer bulmanız yeterlidir. Üstelik
    belediye tarafından sağlanılan tuvalet ve elektrik gibi
    hizmetlerden faydalanmak da ücretsizdir. Bu bakımdan en iyi
    kamp alanlarından birisi olduğunu ifade edebiliriz. Belediye
    tarafından kurulan sosyal tesis içerisinde omlet, içme suyu,
    kahvaltılık gibi birçok şey oldukça uygun fiyattan satışa sunuluyor.


    </string>
    <string name="Saldago7">


    Nasıl gidilir?: Salda gölü, Burdur’un Yeşilova ilçesinde
    bulunan bir gölümüzdür. Yeşilova merkezine 5 dakika kadar
    uzaklıkta yer alan göle gitmek için Burdur merkezden Yeşilova
    ilçesine geçmeniz yeterlidir. İlçeye geldiğinizde gölün manzarasını
    temaşa edebilir ve bir an önce yakından görmek için ilçe
    merkezinden 5 dakikalık bir yolculukla göle ulaşabilirsiniz.

    </string>
    <string name="Kızkalesi">

    Kızkalesi’nde adım atılan her yer tarihi dokuya sahiptir. Bugün, Kızkalesi’ndeki ören
    yerlerinde kalelere, kiliselere, sarnıçlara, su kemerlerine, kaya mezarlarına, lahitlere, taş
    döşemeli yollara rastlanılmaktadır. Kıyıdaki kalenin 500 metre açığındaki küçük bir adacık
    üzerine kurulu kaleye, Kızkalesi denilmektedir. Son yıllarda restore edilen kaleye, sekiz
    kuleyle korunmuştur. Kalenin dış çevre uzunluğu 192 metredir.
    Burada eski dönemlerden kalma 4-5 tane kilise bulunmaktadır. Su kuyuları ve sarnıçların
    yanında, Lemas çayından su kemerleri ile getirilen sular, Kızkalesi’nin su ihtiyacını
    karşılamaktadır. Büyük kiliseye giden taş döşeli Kutsal Yol’da, yol boyunca dizilmiş irili
    ufaklı lahitler görenleri hayrete düşürmektedir.
    Kızkalesi’nin 10 km kuzeyinde yer alan vadinin yükselen kayalık yamacına oyulmuş ve
    Adamkayalar adı verilen insan kabartmaları bulunmaktadır. Dönemin yönetici ve
    soylularını simgeleyen kabartmalardaki figürlerde, kimi elinde üzüm salkımı, kimi
    kanepeye uzanmış haldedir. Roma döneminden kalma toplam 13 tablodan oluşan
    Adamkayalar, Şeytanderesi’ne hakim bir yerdedir. Kızkalesi, Mersin’in en popüler tatil
    merkezidir. Adını aldığı kale, deniz içerisinde olup karadan 200mt. uzaklıktadır. Deniz
    kalesi dışında bir de deniz kalesi ile aynı paralel de karakalesi yer almaktadır. Kızkalesi ile
    ilgili bir çok hikaye olmakla birlikte koyun stratejik konumu nedeniyle saldırılara karşı
    önlem amacıyla denizkalesinin yapıldığı bu kalenin saldırıya karşı ilk savunma noktası
    olması ve ardından kara kalesininde savunma için desteği amaçlanmıştır

    </string>
    <string name="kızkalesi1">

        Mezarlık Kilisesi, Kaya Mezarı, Bazilika ve Şehrin Merkezindeki Katedral’ide mutlaka ziyaret
        ediniz. Ayrıca mükemmel denizin ve kumsalın hem gündüz, hem de akşam keyfini
        çıkarmak mümkün. Deniz derinliği pek olmadığı için boylu boyunca uzanan kumsalında
        çocuklu ailelerin de rahatlıkla gidip gezebileceği bir ortam söz konusudur.
    </string>
    <string name="kızkalesi3">

    Nasıl Gidilir ?: Özellikle yaz aylarında büyük bir canlılığın yaşandığı kızkalesi’ne , ulaşım
    minibüslerle sağlanmaktadır. Kasabada taşıma kooperatifi olduğu için ulaşım problemi
    yoktur.
    </string>
    <string name="lavantavadisi">

        Ülkemizin en önemli lavanta üretim alanı Isparta’nın Keçiborlu ilçesine bağlı Kuyucuk Köyü’nde bulunmaktadır. Lavantalar genellikle Kuşçular, Kuyucuk Ardınçlı ve Aydoğmuş köylerinde üretilmektedir.

        Kuyucuk köyüne varmak üzeriyken yol boyunca sağlı sollu tepelere kadar uzanan lavanta tarlaları görselliği ile muhteşem görünmektedir. Kuyucuk köyü turistlerin akınına uğramamış saf, güzelliği bozulmamış bir köydür.

        Köyün belirgin büyük bir meydanı bulunmamaktadır. Sokakların da kerpiç evleri ve kaldırım kenarlarından fışkıran kocaman lavanta öbekleri bulunmaktadır. 1975 yılında yörenin gül tüccarı Zeki Konur tarafından Fransa’dan getirilen lavanta fideleri otuz aileye on beş kök şeklinde dağıtılmıştır. İlk başlarda gül tarlalarının kenarlarına dikilmiş, ticari amaçla ekimlere ise 1990’lı yıllarda başlanmıştır. Susuz ve kurak olan tarlalar boş kalmasın diye lavanta fideleri ekilmiştir. Bugüne kadarda 3000 hektarlık alana kadar yayılmıştır.

        Köyde herhangi bir kooperatifleşme bulunmamaktadır. Lavantaların hasat sonrasında bir kısmının yağı çıkarılır, bir kısmı da desteler yapılarak kurutulup, düğün, davet ve organizasyon firmalarına satılmaktadır. Lavantalar haziran sonunda morarmaya başlar. Temmuz ayında ise çiçekleri patlayınca mosmor olur. Temmuz sonu ağustos başında ise hasat dönemi başlar. Hasat sırasında lavantalar orak veya hızar tarzı bir bıçakla dipten değil ortadan kesilir. Bir sonraki yılda ise kesilen yerden lavantalar tekrar büyür. Bir kökten on beş hatta yirmi yıl boyunca üretim yapılır.
    </string>
    <string name="lavantavadisi1">

        Lavanta Vadisi, Isparta ilimize bağlı Keçiborlu ilçesine bağlı Kuyucuk Köyünde bulunur. İl merkezine yaklaşık 50 km uzaklıktadır.

    </string>
    <string name="lavatavadisi2">

        Buraya ulaşmak için ilk başta Keçiborlu ilçesine ulaşmak gerekir. İlçe merkezine ulaştıktan sonra Burada Kuyucak Köyüne giden dolmuşlarla ulaşım sağlanabilir. Ya da şahsi aracınızla Keçiborlu ilçesine giriş yapmadan önce kılıç talebesinin gösterdiği tarafa doru sapın ve devam edince ulaşırsınız.
    </string>
    <string name="patara">Patara plajı Antalya’nın Kaş ve Fethiye ilçeleri arasında kalan
        Gelemiş köyü sınırları içerisinde bulunur. Plaj adını Patara Antik
        Kenti’nden almaktadır. Yer yer 200-300 metre derinliğe sahip
        plajın uzunluğu 12 kilometredir. İncecik kumu ve tepecikleri ile
        Yeşilçam’da kızgın çöl sahnelerine ev sahipliği de yapmıştır.
        Plaj içerisinde ihtiyaçlarınızı karşılayabilmeniz için bir Kafeterya
        bulunmaktadır. Bu kafeteryanın gelirleri ile Gelemiş Köyü’nü
        güzelleştirme çalışmaları yapılmaktadır. Hatta yol çalışmaları, çay
        bahçesi, sokakları ışıklandırma çalışmaları, köy okulunun tadilatı,
        köy camisinin tadilatı bu kafeterya sayesinde yapılmış. Şemsiye
        ve Şezlong kiralama yanı sıra çay, kahve, alkollü alkolsüz
        içecekler, gözleme, hamburger tarzı yiyecekler işletmenin size
        sunduğu fırsatlardan bazıları.
        Hatırlatmakta fayda var plaj içerisinde ücretsiz duş ve tuvalet
        bulunmaktadır.
    </string>
    <string name="patara1">

        En önemli özelliği nesli tükenmekte olan Deniz Kaplumbağalarının
        burada yumurta bıraktıkları ender yerlerden biri olması. Bu
        sebeple plaj doğal hayatı koruma vakfı tarafınca hazırlanan proje
        ile korunmaktadır. Ayrıca Hacettepe Üniversitesi’nden bir grup
        ekip kaplumbağaların üreme koşullarını kolaylaştırarak bu
        canlıların neslini devam ettirmeye çalışmaktadır.
        Diğer bir özelliği de uzunluğu. 12 kilometreyi geçen uzunluğu ile
        ülkemizin sayılı uzun plajlarından bir tanesi olma özelliğini taşıyor.


    </string>
    <string name="patara2">

    Plaja giriş ücreti kişibaşı 7.5 Lira. İçeride şezlong ve şemsiye de
    kullanmak isterseniz ayrıca 10 Lira daha kiralama ücreti ödemeniz
    gerekmektedir.
    Plaj caretta kaplumbağalarının doğal yaşam alanı olduğu için
    ziyaret saatleri kısıtlı. 08:00 ile 20:00 arası plajı kullanabilirsiniz.
    Geri kalan saatler plaj kaplumbağaların. Saat 20’den sonra plaja
    girmek yasak olduğu gibi, ateş yakmak, kamp yapmak gibi
    hayvanları korkutacak, ürkütecek davranışlardan da mümkün
    olduğunca kaçınmalısınız.


    </string>
    <string name="patara3">

    Ulaşım: Antalya şehir merkezinden yaklaşık 220 kilometre
    mesafede olan ve araçla yaklaşık 3-4 saat içerisinde
    ulaşabilirsiniz. Özel aracınız varsa; Fethiye’ye doğru giderken,
    Kalkan’ı geçtikten 11 km sonra, Patara sapağı ile
    karşılaşıyorsunuz. Bu yoldan 6 kilometre içeri girerek önce
    Gelemiş Köyüne varıyorsunuz. Buradan ister aracınızla isterseniz
    de 20 dakikalık yürüme ile plaja ulaşabilirsiniz.
    </string>
</resources>