<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF7700"
    android:layout_height="match_parent"
    tools:context=".IspartaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#FF7700"
                android:id="@+id/Gdon2"
                android:src="@drawable/geridon1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Lavanta Vadisi(Isparta)"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/vadi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="italic|bold"
                android:text="@string/lavantavadisi"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="10dp"
                android:text="Lavanta Vadisi Nerede?"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="italic|bold"
                android:text="@string/lavantavadisi1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="Lavanta Vadisi Nerede?Lavanta Vadisi Nasıl Gidilir?"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/torosl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:padding="10dp"
                android:textStyle="italic|bold"
                android:text="@string/lavatavadisi2"
                />




        </LinearLayout>

    </ScrollView>
</FrameLayout>