<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7700"
    tools:context=".mersinFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#FF7700"
                android:id="@+id/Gdon1"
                android:src="@drawable/geridon1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Kız Kalesi(Mersin)"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff">
            </TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/kk"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="italic|bold"
                android:text="@string/Kızkalesi"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Bu Bölgede Gezilecek Yerler"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/km"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="italic|bold"
                android:text="@string/kızkalesi1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Kızkalesi Otelleri Ve Konaklama Yerleri"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="Rain Hotel : 33790 / Mersin – Tel.: 0(324) 523 27 82"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="17sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="Yaka Hotel : Yaka Hotel cd. / Mersin – Tel.: 0(324) 523 24 44"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="17sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Kız Kalesi Nerdedir ? Nasıl Gidilir?"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Adres: Kızkalesi / Erdemli / Mersin"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="italic|bold"
                android:text="@string/kızkalesi3"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/kkn"/>







        </LinearLayout>

    </ScrollView>

</FrameLayout>